--- a/GPSCompanionApp/app/src/main/res/menu/main_activity.xml
+++ b/GPSCompanionApp/app/src/main/res/menu/main_activity.xml
@@ -2,19 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/acbtn_retrieveLatestData"
-        android:icon="@drawable/vector_sync_white"
+    <item android:id="@+id/acbtn_selectByDate"
+        android:icon="@drawable/event_white"
         app:showAsAction="always"
-        android:title="@string/btn_recentData"
-        />
+        android:title="@string/btn_recentData" />
 
     <item android:id="@+id/btn_journeySelectMode"
         android:icon="@drawable/vector_timeline_normal"
         app:showAsAction="always"
         android:title="@string/btn_journeySelectMode"/>
 
-    <item
-        android:id="@+id/action_settings"
+    <item android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
