--- a/GPSCompanionApp/app/src/main/res/layout/list_view_item_journey.xml
+++ b/GPSCompanionApp/app/src/main/res/layout/list_view_item_journey.xml
@@ -14,13 +14,11 @@
         android:text="Start: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
     <TextView android:id="@+id/lbl_startDateTimeValue"
         android:layout_toRightOf="@id/dummyView"
         android:layout_alignBaseline="@id/lbl_startDateTime"
         android:layout_width="wrap_content"
-        
         android:layout_height="wrap_content" style="@style/LabelValue"/>
 
     <TextView android:id="@+id/lbl_endDateTime"
@@ -28,14 +26,12 @@
         android:text="End: "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
     <TextView android:id="@+id/lbl_endDateTimeValue"
         android:layout_toRightOf="@id/dummyView"
         android:layout_alignBaseline="@id/lbl_endDateTime"
         android:layout_below="@id/lbl_startDateTimeValue"
         android:layout_width="wrap_content"
-        
         android:layout_height="wrap_content" style="@style/LabelValue"/>
 
     <TextView android:id="@+id/lbl_speedStats"
@@ -43,14 +39,12 @@
         android:text="@string/lbl_speedValues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
     <TextView android:id="@+id/lbl_speedStatsValue"
         android:layout_toRightOf="@id/dummyView"
         android:layout_alignBaseline="@id/lbl_speedStats"
         android:layout_below="@id/lbl_endDateTimeValue"
         android:layout_width="wrap_content"
-        
         android:layout_height="wrap_content" style="@style/LabelValue"/>
 
     <TextView android:id="@+id/lbl_altitudeValues"
@@ -58,14 +52,12 @@
         android:text="@string/lbl_altitudeValues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
     <TextView android:id="@+id/lbl_altitudeValuesValue"
         android:layout_toRightOf="@id/dummyView"
         android:layout_alignBaseline="@id/lbl_altitudeValues"
         android:layout_below="@id/lbl_speedStatsValue"
         android:layout_width="wrap_content"
-        
         android:layout_height="wrap_content" style="@style/LabelValue"/>
 
     <TextView android:id="@+id/lbl_timeDiffValues"
@@ -73,14 +65,25 @@
         android:text="@string/lbl_timeDiffValues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
     <TextView android:id="@+id/lbl_timeDiffValuesValue"
         android:layout_toRightOf="@id/dummyView"
         android:layout_alignBaseline="@id/lbl_timeDiffValues"
         android:layout_below="@id/lbl_altitudeValuesValue"
         android:layout_width="wrap_content"
-        
+        android:layout_height="wrap_content" style="@style/LabelValue"/>
+
+    <TextView android:id="@+id/lbl_distanceValue"
+        android:layout_below="@id/lbl_timeDiffValues"
+        android:text="@string/lbl_distanceValues"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
+    <TextView android:id="@+id/lbl_distanceValueValue"
+        android:layout_toRightOf="@id/dummyView"
+        android:layout_alignBaseline="@id/lbl_distanceValue"
+        android:layout_below="@id/lbl_timeDiffValuesValue"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" style="@style/LabelValue"/>
 
 </RelativeLayout>
